--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.10.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -30,6 +32,7 @@
     "sass": "^1.56.1",
     "style": "^0.0.3",
     "styled-components": "^5.3.6",
+    "styled-reset": "^4.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
